FIX-CLI integration tests and error reporting