@@ -19,8 +19,8 @@ import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 import java.text.MessageFormat;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -54,6 +54,7 @@ import fr.treeptik.cloudunit.model.Module;
 
 @Component
 public class ApplicationUtils {
+    private static final String ENV_VAR_ADDED = "Environment variable \"{0}\" has been added to application \"{1}\"";
     private static final String ENV_VAR_REMOVED = "Environment variable \"{0}\" has been removed from application \"{1}\"";
     private static final String NO_SUCH_ENV_VAR = "No such environment variable \"{0}\"";
     private static final String APPLICATION_CREATED = "Application \"{0}\" has been created";
@@ -62,6 +63,9 @@ public class ApplicationUtils {
     private static final String APPLICATION_STOPPED = "Application \"{0}\" has been stopped";
     private static final String NO_APPLICATION = Messages.getString("application.NO_APPLICATION");
     private static final String NO_SUCH_APPLICATION = Messages.getString("application.NO_SUCH_APPLICATION");
+    private static final String ALIAS_COUNT = Messages.getString("application.ALIAS_COUNT");
+    private static final String ALIAS_ADDED = Messages.getString("application.ALIAS_ADDED");
+    private static final String ALIAS_REMOVED = Messages.getString("application.ALIAS_REMOVED");
 
     @InjectLogger
     private Logger log;
@@ -84,42 +88,40 @@ public class ApplicationUtils {
     @Autowired
     private FileUtils fileUtils;
 
-    private Application application;
+    private Application currentApplication;
 
-    public Application getApplication() {
-        return application;
+    public Application getCurrentApplication() {
+        return currentApplication;
     }
 
-    public void setApplication(Application application) {
-        this.application = application;
+    public void setCurrentApplication(Application application) {
+        this.currentApplication = application;
     }
 
     public boolean isApplicationSelected() {
-        return application != null;
+        return currentApplication != null;
     }
     
     public void checkApplicationSelected() {
         Guard.guardTrue(isApplicationSelected(), NO_APPLICATION);
+        currentApplication = getApplication(currentApplication.getName());
     }
-
-    private void checkApplication(String applicationName) {
+    
+    public void checkConnectedAndApplicationSelected() {
         authenticationUtils.checkConnected();
+        checkApplicationSelected();
         fileUtils.checkNotInFileExplorer();
-        
-        if (StringUtils.isEmpty(applicationName)) {
-            checkApplicationSelected();
-        } else {
-            checkApplicationExists(applicationName);
-        }
     }
 
     public boolean applicationExists(String applicationName) {
-        // TODO use a proper query
         try {
-            useApplication(applicationName);
-            return true;
-        } catch (Exception e) {
-            return false;
+            return listAllApps().stream()
+                    .map(app -> app.getName())
+                    .filter(name -> name.equals(applicationName))
+                    .findAny()
+                    .isPresent();
+        } catch (ManagerResponseException e) {
+            throw new CloudUnitCliException("Couldn't check for application", e);
         }
     }
     
@@ -128,36 +130,51 @@ public class ApplicationUtils {
     }
 
     public String getInformations() {
-        checkApplication(null);
+        checkConnectedAndApplicationSelected();
 
-        useApplication(application.getName());
-        String dockerManagerIP = application.getManagerIp();
+        useApplication(currentApplication.getName());
+        String dockerManagerIP = currentApplication.getManagerIp();
         statusCommand.setExitStatut(0);
 
-        MessageConverter.buildApplicationMessage(application, dockerManagerIP);
+        MessageConverter.buildApplicationMessage(currentApplication, dockerManagerIP);
         return "Terminated";
+    }
+    
+    public Application getApplication(String applicationName) {
+        String result;
+        try {
+            String url = authenticationUtils.finalHost + urlLoader.actionApplication + applicationName;
+            result = restUtils.sendGetCommand(url, authenticationUtils.getMap()).get("body");
+        } catch (ManagerResponseException e) {
+            throw new CloudUnitCliException("Couldn't get application", e);
+        }
+
+        if (StringUtils.isNotBlank(result)) {
+            return JsonConverter.getApplication(result);
+        } else {
+            throw new CloudUnitCliException(MessageFormat.format(NO_SUCH_APPLICATION, applicationName));
+        }        
+    }
+    
+    public Application getSpecificOrCurrentApplication(String applicationName) {
+        authenticationUtils.checkConnected();
+        fileUtils.checkNotInFileExplorer();
+        
+        if (StringUtils.isEmpty(applicationName)) {
+            checkApplicationSelected();
+            return currentApplication;
+        } else {
+            checkApplicationExists(applicationName);
+            return getApplication(applicationName);
+        }
     }
 
     public String useApplication(String applicationName) {
-        String json = null;
-
         authenticationUtils.checkConnected();
         fileUtils.checkNotInFileExplorer();
 
-        try {
-            String url = authenticationUtils.finalHost + urlLoader.actionApplication + applicationName;
-            json = restUtils.sendGetCommand(url, authenticationUtils.getMap()).get("body");
-        } catch (ManagerResponseException e) {
-            return ANSIConstants.ANSI_RED + e.getMessage() + ANSIConstants.ANSI_RESET;
-        }
-        statusCommand.setExitStatut(0);
-
-        if (json != null && json.trim().length() > 0) {
-            setApplication(JsonConverter.getApplication(json));
-            return "Current application : " + getApplication().getName();
-        } else {
-            throw new CloudUnitCliException(MessageFormat.format(NO_SUCH_APPLICATION, applicationName));
-        }
+        currentApplication = getApplication(applicationName);
+        return MessageFormat.format("Using application \"{0}\"", currentApplication.getName());
     }
     
     public String createApp(String applicationName, String serverName) {
@@ -165,10 +182,7 @@ public class ApplicationUtils {
         fileUtils.checkNotInFileExplorer();
 
         try {
-            if (checkUtils.checkImageNoExist(serverName)) {
-                statusCommand.setExitStatut(1);
-                return ANSIConstants.ANSI_RED + "This server image does not exist" + ANSIConstants.ANSI_RESET;
-            }
+            checkUtils.checkImageExists(serverName);
             Map<String, String> parameters = new HashMap<>();
             parameters.put("applicationName", applicationName);
             parameters.put("serverName", serverName);
@@ -176,15 +190,10 @@ public class ApplicationUtils {
             restUtils.sendPostCommand(authenticationUtils.finalHost + urlLoader.actionApplication,
                     authenticationUtils.getMap(), parameters).get("body");
 
-            statusCommand.setExitStatut(0);
-            
             useApplication(applicationName);
-
-            return MessageFormat.format(APPLICATION_CREATED, application.getName());
-
+            return MessageFormat.format(APPLICATION_CREATED, currentApplication.getName());
         } catch (ManagerResponseException e) {
-            statusCommand.setExitStatut(1);
-            return ANSIConstants.ANSI_RED + e.getMessage() + ANSIConstants.ANSI_RESET;
+            throw new CloudUnitCliException("Couldn't create application", e);
         }
     }
 
@@ -192,12 +201,20 @@ public class ApplicationUtils {
         authenticationUtils.checkConnected();
         fileUtils.checkNotInFileExplorer();
         
+        Application application = null;
+        
         if (StringUtils.isEmpty(applicationName)) {
             checkApplicationSelected();
-        } else if (errorIfNotExists) {
-            checkApplicationExists(applicationName);
-        } else if (!applicationExists(applicationName)) {
-            return "";
+            
+            application = currentApplication;
+        } else {
+            if (errorIfNotExists) {
+                checkApplicationExists(applicationName);
+            } else if (!applicationExists(applicationName)) {
+                return MessageFormat.format(NO_SUCH_APPLICATION, applicationName);
+            }
+            
+            application = getApplication(applicationName);
         }
         
         if (prompter != null) {
@@ -212,34 +229,36 @@ public class ApplicationUtils {
             restUtils.sendDeleteCommand(
                     authenticationUtils.finalHost + urlLoader.actionApplication + application.getName(),
                     authenticationUtils.getMap()).get("body");
-            statusCommand.setExitStatut(0);
+            
+            if (application.equals(currentApplication)) {
+                currentApplication = null;
+            }
+            
             return MessageFormat.format(APPLICATION_REMOVED, application.getName());
         } catch (ManagerResponseException e) {
-            statusCommand.setExitStatut(1);
-            return ANSIConstants.ANSI_RED + e.getMessage() + ANSIConstants.ANSI_RESET;
-        } finally {
-            setApplication(null);
+            throw new CloudUnitCliException("Couldn't remove application", e);
         }
     }
 
     public String startApp(String applicationName) {
-        checkApplication(applicationName);
+        Application application = getSpecificOrCurrentApplication(applicationName);
+
+        Map<String, String> parameters = new HashMap<>();
+        parameters.put("applicationName", application.getName());
 
         try {
-            Map<String, String> parameters = new HashMap<>();
-            parameters.put("applicationName", application.getName());
             restUtils.sendPostCommand(authenticationUtils.finalHost + urlLoader.actionApplication + urlLoader.start,
                     authenticationUtils.getMap(), parameters).get("body");
-            statusCommand.setExitStatut(0);
-            return MessageFormat.format(APPLICATION_STARTED, application.getName());
+
         } catch (ManagerResponseException e) {
-            statusCommand.setExitStatut(1);
-            return ANSIConstants.ANSI_RED + e.getMessage() + ANSIConstants.ANSI_RESET;
+            throw new CloudUnitCliException("Couldn't start application", e);
         }
+        
+        return MessageFormat.format(APPLICATION_STARTED, application.getName());
     }
 
     public String stopApp(String applicationName) {
-        checkApplication(applicationName);
+        Application application = getSpecificOrCurrentApplication(applicationName);
         
         Map<String, String> parameters = new HashMap<>();
         parameters.put("applicationName", application.getName());
@@ -248,27 +267,22 @@ public class ApplicationUtils {
             restUtils.sendPostCommand(authenticationUtils.finalHost + urlLoader.actionApplication + urlLoader.stop,
                     authenticationUtils.getMap(), parameters).get("body");
         } catch (ManagerResponseException e) {
-            statusCommand.setExitStatut(1);
             return ANSIConstants.ANSI_RED + e.getMessage() + ANSIConstants.ANSI_RESET;
         }
-        statusCommand.setExitStatut(0);
 
         return MessageFormat.format(APPLICATION_STOPPED, application.getName());
     }
 
     public List<Application> listAllApps() throws ManagerResponseException {
-        List<Application> listApplications;
         String json = null;
-
         try {
             json = (String) restUtils.sendGetCommand(authenticationUtils.finalHost + urlLoader.listAllApplications,
                     authenticationUtils.getMap()).get("body");
         } catch (ManagerResponseException e) {
-            throw new ManagerResponseException(e.getMessage(), e);
+            throw new CloudUnitCliException("Couldn't list applications", e);
         }
 
-        listApplications = JsonConverter.getApplications(json);
-        statusCommand.setExitStatut(0);
+        List<Application> listApplications = JsonConverter.getApplications(json);
         return listApplications;
     }
 
@@ -289,47 +303,36 @@ public class ApplicationUtils {
     }
 
     public String deployFromAWar(File path, boolean openBrowser) throws MalformedURLException, URISyntaxException {
-        checkApplication(null);
+        checkConnectedAndApplicationSelected();
         
         String body = "";
 
-        if (path == null) {
-
-            statusCommand.setExitStatut(1);
-            return ANSIConstants.ANSI_RED + "You must precise the file path with -p option" + ANSIConstants.ANSI_RESET;
-
-        } else {
-            // refresh application informations
-            useApplication(application.getName());
-
-            try {
-                File file = path;
-                FileInputStream fileInputStream = new FileInputStream(file);
-                fileInputStream.available();
-                fileInputStream.close();
-                FileSystemResource resource = new FileSystemResource(file);
-                Map<String, Object> params = new HashMap<>();
-                params.put("file", resource);
-                params.putAll(authenticationUtils.getMap());
-                body = (String) restUtils.sendPostForUpload(authenticationUtils.finalHost
-                        + urlLoader.actionApplication + application.getName() + "/deploy", params).get("body");
-                statusCommand.setExitStatut(0);
-
-            } catch (IOException e) {
-
-                return ANSIConstants.ANSI_RED + "File not found! Check the path file" + ANSIConstants.ANSI_RESET;
-            }
+        Guard.guardTrue(path != null, "Please specify a file path");
+        
+        try {
+            File file = path;
+            FileInputStream fileInputStream = new FileInputStream(file);
+            fileInputStream.available();
+            fileInputStream.close();
+            FileSystemResource resource = new FileSystemResource(file);
+            Map<String, Object> params = new HashMap<>();
+            params.put("file", resource);
+            params.putAll(authenticationUtils.getMap());
+            body = (String) restUtils.sendPostForUpload(authenticationUtils.finalHost
+                    + urlLoader.actionApplication + currentApplication.getName() + "/deploy", params).get("body");
+        } catch (IOException e) {
+            throw new CloudUnitCliException("The file could not be opened", e);
         }
 
-        if (!body.equalsIgnoreCase("") && openBrowser) {
-            DesktopAPI.browse(new URL(application.getLocation()).toURI());
+        if (StringUtils.isNotEmpty(body) && openBrowser) {
+            DesktopAPI.browse(URI.create(currentApplication.getLocation()));
         }
 
-        return "War deployed - Access on " + application.getLocation();
+        return MessageFormat.format("Application deployed. Access on {0}", currentApplication.getLocation());
     }
 
     public String addNewAlias(String applicationName, String alias) {
-        checkApplication(applicationName);
+        Application application = getSpecificOrCurrentApplication(applicationName);
 
         Map<String, String> parameters = new HashMap<>();
         parameters.put("applicationName", application.getName());
@@ -338,15 +341,15 @@ public class ApplicationUtils {
             restUtils.sendPostCommand(authenticationUtils.finalHost + urlLoader.actionApplication + "/alias",
                     authenticationUtils.getMap(), parameters).get("body");
         } catch (ManagerResponseException e) {
-            statusCommand.setExitStatut(1);
-            return ANSIConstants.ANSI_RED + e.getMessage() + ANSIConstants.ANSI_RESET;
+            throw new CloudUnitCliException("Couldn't add new alias", e);
         }
-        statusCommand.setExitStatut(0);
-        return "An alias has been successfully added to " + application.getName();
+        return MessageFormat.format(ALIAS_ADDED,
+                alias,
+                application.getName());
     }
 
     public String listAllAliases(String applicationName) {
-        checkApplication(applicationName);
+        Application application = getSpecificOrCurrentApplication(applicationName);
         
         String response = null;
 
@@ -355,19 +358,16 @@ public class ApplicationUtils {
                     authenticationUtils.finalHost + urlLoader.actionApplication + application.getName() + "/alias",
                     authenticationUtils.getMap()).get("body");
         } catch (ManagerResponseException e) {
-            statusCommand.setExitStatut(1);
-            return ANSIConstants.ANSI_RED + e.getMessage() + ANSIConstants.ANSI_RESET;
+            throw new CloudUnitCliException("Couldn't list aliases", e);
         }
 
         MessageConverter.buildListAliases(JsonConverter.getAliases(response));
 
-        statusCommand.setExitStatut(0);
-
-        return JsonConverter.getAliases(response).size() + " aliases found!";
+        return MessageFormat.format(ALIAS_COUNT, JsonConverter.getAliases(response).size());
     }
 
     public String removeAlias(String applicationName, String alias) {
-        checkApplication(applicationName);
+        Application application = getSpecificOrCurrentApplication(applicationName);
         
         try {
 
@@ -380,7 +380,7 @@ public class ApplicationUtils {
 
         statusCommand.setExitStatut(0);
 
-        return "This alias has successful been deleted";
+        return MessageFormat.format(ALIAS_REMOVED, alias, application.getName());
     }
 
     @Deprecated
@@ -397,7 +397,7 @@ public class ApplicationUtils {
                     + ANSIConstants.ANSI_RESET;
         }
 
-        if (application == null && applicationName == null) {
+        if (currentApplication == null && applicationName == null) {
             statusCommand.setExitStatut(1);
             return ANSIConstants.ANSI_RED
                     + "No application is currently selected by the following command line : use <application name>"
@@ -414,7 +414,7 @@ public class ApplicationUtils {
     }
     
     public String createEnvironmentVariable(String applicationName, String key, String value) {
-        checkApplication(applicationName);
+        Application application = getSpecificOrCurrentApplication(applicationName);
         
         Guard.guardTrue(StringUtils.isNotEmpty(key), "No key was given");
         Guard.guardTrue(Pattern.matches("^[a-zA-Z][-a-zA-Z0-9_]*$", key), "Invalid key name \"{0}\"", key);
@@ -429,17 +429,13 @@ public class ApplicationUtils {
                             + "/container/" + application.getServer().getName() + "/environmentVariables",
                     authenticationUtils.getMap(), parameters).get("body");
         } catch (ManagerResponseException e) {
-            statusCommand.setExitStatut(1);
-            return ANSIConstants.ANSI_RED + e.getMessage() + ANSIConstants.ANSI_RESET;
+            throw new CloudUnitCliException("Couldn't create environment variable", e);
         }
 
-        statusCommand.setExitStatut(0);
-        return MessageFormat.format("Environment variable \"{0}\" has been added to application \"{1}\"",
-                key,
-                application.getName());
+        return MessageFormat.format(ENV_VAR_ADDED, key, application.getName());
     }
 
-    private EnvironmentVariable getEnvironmentVariable(String key) throws ManagerResponseException {
+    private EnvironmentVariable getEnvironmentVariable(Application application, String key) throws ManagerResponseException {
         String response = restUtils.sendGetCommand(
                 authenticationUtils.finalHost + urlLoader.actionApplication + application.getName()
                         + "/container/" + application.getServer().getName() + "/environmentVariables",
@@ -454,30 +450,28 @@ public class ApplicationUtils {
     }
 
     public String removeEnvironmentVariable(String applicationName, String key) {
-        checkApplication(applicationName);
+        Application application = getSpecificOrCurrentApplication(applicationName);
 
         try {
-            EnvironmentVariable variable = getEnvironmentVariable(key);
+            EnvironmentVariable variable = getEnvironmentVariable(application, key);
             int id = variable.getId();
 
             restUtils.sendDeleteCommand(
                     authenticationUtils.finalHost + urlLoader.actionApplication + application.getName()
                             + "/container/" + application.getServer().getName() + "/environmentVariables/" + id,
                     authenticationUtils.getMap()).get("body");
-        } catch (Exception e) {
-            statusCommand.setExitStatut(1);
-            return ANSIConstants.ANSI_RED + e.getMessage() + ANSIConstants.ANSI_RESET;
+        } catch (ManagerResponseException e) {
+            throw new CloudUnitCliException("Couldn't remove environment variable", e);
         }
 
-        statusCommand.setExitStatut(0);
         return MessageFormat.format(ENV_VAR_REMOVED, key, application.getName());
     }
 
     public String updateEnvironmentVariable(String applicationName, String oldKey, String newKey, String value) {
-        checkApplication(applicationName);
+        Application application = getSpecificOrCurrentApplication(applicationName);
 
         try {
-            EnvironmentVariable variable = getEnvironmentVariable(oldKey);
+            EnvironmentVariable variable = getEnvironmentVariable(application, oldKey);
             int id = variable.getId();
 
             Map<String, String> parameters = new HashMap<>();
@@ -489,8 +483,7 @@ public class ApplicationUtils {
                             + "/container/" + application.getServer().getName() + "/environmentVariables/" + id,
                     authenticationUtils.getMap(), parameters).get("body");
         } catch (ManagerResponseException e) {
-            statusCommand.setExitStatut(1);
-            return ANSIConstants.ANSI_RED + e.getMessage() + ANSIConstants.ANSI_RESET;
+            throw new CloudUnitCliException("", e); 
         }
 
         statusCommand.setExitStatut(0);
@@ -499,7 +492,7 @@ public class ApplicationUtils {
     }
 
     public String listAllEnvironmentVariables(String applicationName) {
-        checkApplication(applicationName);
+        Application application = getSpecificOrCurrentApplication(applicationName);
         
         try {
             String response = restUtils.sendGetCommand(
@@ -509,22 +502,20 @@ public class ApplicationUtils {
             
             MessageConverter.buildListEnvironmentVariables(JsonConverter.getEnvironmentVariables(response));
 
-            statusCommand.setExitStatut(0);
             return JsonConverter.getEnvironmentVariables(response).size() + " variables found!";
         } catch (ManagerResponseException e) {
-            statusCommand.setExitStatut(1);
-            return ANSIConstants.ANSI_RED + e.getMessage() + ANSIConstants.ANSI_RESET;
+            throw new CloudUnitCliException("Couldn't list environment variables", e);
         }
 
     }
 
     public String listContainers(String applicationName) {
-        checkApplication(applicationName);
+        Application application = getSpecificOrCurrentApplication(applicationName);
 
         List<String> containers = new ArrayList<>();
-        containers.add(getApplication().getServer().getName());
+        containers.add(application.getServer().getName());
 
-        for (Module module : getApplication().getModules()) {
+        for (Module module : application.getModules()) {
             containers.add(module.getName());
         }
         MessageConverter.buildListContainers(containers);
@@ -539,8 +530,8 @@ public class ApplicationUtils {
 
         try {
             response = restUtils.sendGetCommand(
-                    authenticationUtils.finalHost + urlLoader.actionApplication + application.getName()
-                            + "/container/" + application.getServer().getName() + "/command",
+                    authenticationUtils.finalHost + urlLoader.actionApplication + currentApplication.getName()
+                            + "/container/" + currentApplication.getServer().getName() + "/command",
                     authenticationUtils.getMap()).get("body");
 
         } catch (ManagerResponseException e) {
@@ -558,13 +549,13 @@ public class ApplicationUtils {
     public String execCommand(String name, String containerName, String arguments) {
 
         if (containerName == null) {
-            if (getApplication() == null) {
+            if (getCurrentApplication() == null) {
                 statusCommand.setExitStatut(1);
                 return ANSIConstants.ANSI_RED
                         + "No application is currently selected by the following command line : use <application name>"
                         + ANSIConstants.ANSI_RESET;
             }
-            containerName = getApplication().getServer().getName();
+            containerName = getCurrentApplication().getServer().getName();
         }
 
         try {
@@ -574,8 +565,8 @@ public class ApplicationUtils {
             ObjectMapper objectMapper = new ObjectMapper();
             String entity = objectMapper.writeValueAsString(command);
             restUtils.sendPostCommand(
-                    authenticationUtils.finalHost + urlLoader.actionApplication + application.getName()
-                            + "/container/" + application.getServer().getName() + "/command/" + name + "/exec",
+                    authenticationUtils.finalHost + urlLoader.actionApplication + currentApplication.getName()
+                            + "/container/" + currentApplication.getServer().getName() + "/command/" + name + "/exec",
                     authenticationUtils.getMap(), entity);
 
         } catch (ManagerResponseException | JsonProcessingException e) {
